# think-reason-learn

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  llm_context.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Dockerfile  conf.py  index.rst
docs/buildclear/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  research.html  search.html  searchindex.js  think_reason_learn.core.html  think_reason_learn.core.llms.html  think_reason_learn.gpthtree.html  think_reason_learn.gptree.html  think_reason_learn.html  think_reason_learn.rrf.html
docs/buildclear/.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree  modules.doctree  research.doctree  think_reason_learn.core.doctree  think_reason_learn.core.llms.doctree  think_reason_learn.doctree  think_reason_learn.gpthtree.doctree  think_reason_learn.gptree.doctree  think_reason_learn.rrf.doctree
docs/buildclear/.doctrees/getting_started/: about.doctree  installation_guide.doctree  quick_start.doctree
docs/buildclear/_sources/: changelog.rst.txt  index.rst.txt  research.rst.txt  think_reason_learn.rrf.rst.txt  think_reason_learn.rst.txt
docs/buildclear/_sources/getting_started/: about.rst.txt  installation_guide.rst.txt  quick_start.rst.txt
docs/buildclear/_static/: custom.css
docs/buildclear/getting_started/: about.html  installation_guide.html  quick_start.html
docs/source/: conf.py  contributing.rst  index.rst  license.rst  modules.rst  research.rst  think_reason_learn.core.llms.rst  think_reason_learn.core.rst  think_reason_learn.gpthtree.rst  think_reason_learn.gptree.rst  think_reason_learn.rrf.rst  think_reason_learn.rst
docs/source/_static/: api-detection.js  custom.css  external_links.js
docs/source/getting_started/: about.rst  installation_guide.rst  quick_start.rst
examples/: gptree.ipynb  policyinduction.ipynb  rrf.ipynb  rrf.py
examples/example_gptree/: gptree.json
examples/example_rrf/: questions.parquet  rrf.json
reasoning_forest/core/: _singleton.py
reasoning_forest/core/llms/: __init__.py  _response_schema.py  ask.py  schamas.py
reasoning_forest/core/llms/_anthropic/: __init__.py  ask.py  schamas.py
reasoning_forest/core/llms/_google/: __init__.py  ask.py  schamas.py
reasoning_forest/core/llms/_openai/: __init__.py  ask.py  schamas.py
reasoning_forest/core/llms/_xai/: __init__.py  ask.py  schamas.py
tests/: conftest.py  fake_llm.py  test_features.py  test_gptree.py  test_llm_respond.py  test_placeholder.py  test_policy_induction.py  test_rrf.py  test_xai_llm.py
think_reason_learn/: __init__.py
think_reason_learn/core/: __init__.py  _config.py  _exceptions.py  _types.py  exceptions.py  utils.py
think_reason_learn/core/llms/: __init__.py  _ask.py  _schemas.py  ask.py  schemas.py
think_reason_learn/core/llms/_anthropic/: ask.py  schemas.py
think_reason_learn/core/llms/_google/: ask.py  schemas.py
think_reason_learn/core/llms/_openai/: ask.py  schemas.py
think_reason_learn/core/llms/_xai/: ask.py  schemas.py
think_reason_learn/features/: __init__.py  _evaluator.py  _generator.py  _prompts.py  _types.py
think_reason_learn/gpthtree/: __init__.py
think_reason_learn/gptree/: __init__.py  _gptree.py  _prompts.py  _types.py  gptree.py
think_reason_learn/policy_induction/: __init__.py  _policy_induction.py  _prompts.py
think_reason_learn/rrf/: __init__.py  _cost_sensitive.py  _cross_validation.py  _prompt_presets.py  _prompts.py  _rrf.py  _types.py
